--- a/styles/App.css
+++ b/styles/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@500;700&display=swap");
 html {
@@ -56,22 +57,23 @@ ul li {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #ffffff;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #b4b4b4;
+  border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: #b3b3b3;
 }
 
 .hero {
@@ -143,8 +145,9 @@ ul li {
 }
 
 .hero__content > div:nth-of-type(1) > h2 {
-  font-weight: 900;
-  font-size: 50px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 26px;
   text-transform: uppercase;
   color: white;
   letter-spacing: 2px;
@@ -161,34 +164,121 @@ ul li {
   max-width: 600px;
   color: white;
   font-family: Open Sans, sans-serif;
-  font-size: 18px;
+  font-size: 14px;
   font-weight: 300;
   line-height: 1.7em;
   word-spacing: 1px;
   text-align: justify;
   margin-top: 20px;
+  opacity: 0.7;
+  font-family: "Montserrat", sans-serif;
 }
 
 .hero__content > div:nth-of-type(1) > button {
-  background-color: #ec4d29;
+  background-color: transparent;
   color: white;
-  padding: 15px 70px;
+  padding: 15px 10px;
   border: none;
   cursor: pointer;
   font-size: 1.125rem;
   font-weight: 700;
-  -webkit-box-shadow: 0px 10px 13px -7px #00000067;
-          box-shadow: 0px 10px 13px -7px #00000067;
   border-radius: 50px;
   outline: none;
   margin-top: 30px;
 }
 
-.hero__content > div:nth-of-type(1) > button:hover {
-  opacity: 0.8;
+.hero #new-style {
+  position: relative;
+  display: inline-block;
+  padding: 1.2em 4em;
+  text-decoration: none;
+  text-align: center;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  color: white;
+  text-shadow: 0px 0px #000;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+}
+
+.hero #new-style::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
+  background: linear-gradient(135deg, rgba(255, 255, 255, 0.405), rgba(255, 255, 255, 0.444));
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  border-radius: 8px;
+  -webkit-transition: -webkit-box-shadow 0.5s ease, -webkit-transform 0.2s ease;
+  transition: -webkit-box-shadow 0.5s ease, -webkit-transform 0.2s ease;
+  transition: box-shadow 0.5s ease, transform 0.2s ease;
+  transition: box-shadow 0.5s ease, transform 0.2s ease, -webkit-box-shadow 0.5s ease, -webkit-transform 0.2s ease;
+  will-change: transform;
+  -webkit-box-shadow: 0 2px 15px rgba(0, 0, 0, 0.15);
+          box-shadow: 0 2px 15px rgba(0, 0, 0, 0.15);
+  -webkit-transform: translateY(var(--ty, 0)) rotateX(var(--rx, 0)) rotateY(var(--ry, 0)) translateZ(var(--tz, -12px));
+          transform: translateY(var(--ty, 0)) rotateX(var(--rx, 0)) rotateY(var(--ry, 0)) translateZ(var(--tz, -12px));
+}
+
+.hero #new-style:hover::before {
+  -webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+.hero #new-style::after {
+  position: relative;
+  display: inline-block;
+  content: attr(data-title);
+  -webkit-transition: -webkit-transform 0.2s ease;
+  transition: -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease;
+  transition: transform 0.2s ease, -webkit-transform 0.2s ease;
+  font-weight: bold;
+  letter-spacing: 0.01em;
+  will-change: transform;
+  -webkit-transform: translateY(var(--ty, 0)) rotateX(var(--rx, 0)) rotateY(var(--ry, 0));
+          transform: translateY(var(--ty, 0)) rotateX(var(--rx, 0)) rotateY(var(--ry, 0));
+}
+
+.hero .animate-charcter {
+  text-transform: uppercase;
+  background-image: linear-gradient(-225deg, #fff 0%, rgba(255, 255, 255, 0.5) 29%, rgba(255, 255, 255, 0.3) 67%, rgba(255, 255, 255, 0.2) 100%);
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: textClip 3s linear infinite;
+          animation: textClip 3s linear infinite;
+  display: inline-block;
+  font-size: 190px;
+}
+
+@-webkit-keyframes textClip {
+  to {
+    background-position: 200% center;
+  }
+}
+
+@keyframes textClip {
+  to {
+    background-position: 200% center;
+  }
 }
 
 .nav {
+  font-family: "Montserrat", sans-serif;
   position: fixed;
   width: 100%;
   z-index: 10;
@@ -235,7 +325,7 @@ ul li {
 
 .nav__left > a {
   color: white;
-  font-weight: 700;
+  font-weight: 400;
   font-size: 1.525rem;
 }
 
@@ -277,7 +367,7 @@ ul li {
 .nav__right span {
   color: white;
   margin-left: 70px;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 300;
   letter-spacing: 1px;
   display: -webkit-box;
