--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -1,66 +1,68 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 html {
-  font-size: 100%;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
+    font-size: 100%;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
-  padding: 0px;
-  margin: 0px;
+    box-sizing: inherit;
+    padding: 0px;
+    margin: 0px;
 }
 
 body {
-  padding: 0px;
-  margin: 0px;
-  font-family: "Fira Sans", sans-serif;
+    padding: 0px;
+    margin: 0px;
+    font-family: "Fira Sans", sans-serif;
 }
 p {
-  line-height: 160%;
+    line-height: 160%;
 }
 a {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 ul li {
-  list-style: none;
+    list-style: none;
 }
 
 .lottie__file {
-  @include breakpoints-down(small) {
-    display: none;
-  }
+    @include breakpoints-down(small) {
+        display: none;
+    }
 
-  @include breakpoints-down(medium) {
-    svg {
-      width: 60vw !important;
+    @include breakpoints-down(medium) {
+        svg {
+            width: 60vw !important;
+        }
     }
-  }
-  @include breakpoints-down(small) {
-    svg {
-      display: none;
+    @include breakpoints-down(small) {
+        svg {
+            display: none;
+        }
     }
-  }
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 8px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+    background: #ffffff;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+    background: rgb(180, 180, 180);
+    border-radius: 5px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+    background: rgb(179, 179, 179);
 }
