--- a/components/Contact/_contact.scss
+++ b/components/Contact/_contact.scss
@@ -1,84 +1,93 @@
 .contact {
-  padding: 30px 0px;
+  padding: 100px 0px;
+  @include max-width;
   @include breakpoints-down(medium) {
-    padding: 10px 30px;
+    padding: 50px 0px;
   }
-  background-color: #e6f2ff;
-  &_head {
-    h2 {
-      text-transform: uppercase;
-      font-size: 36px;
-      letter-spacing: 0.02em;
-      color: #1b2935;
-      font-weight: 700;
-      text-transform: uppercase;
-      line-height: 1.2em;
-      text-align: center;
-      margin-top: 100px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  @include breakpoints-down(medium) {
+    grid-template-columns: 1fr;
+  }
+  gap: 10px;
+  &__left {
+    > div {
+      margin-bottom: 50px;
+      p {
+        &:nth-of-type(1) {
+          font-size: 18px;
+          letter-spacing: 5px;
+        }
+        &:nth-of-type(2) {
+          color: #d8d8d8;
+          font-size: 24px;
+          cursor: pointer;
+          transition: all 0.3s ease-in-out;
+          &:hover {
+            color: $button-color;
+          }
+        }
+      }
+      a {
+        padding-top: 30px;
+        .MuiSvgIcon-root {
+          color: #d8d8d8;
+          font-size: 42px;
+          margin-right: 20px;
+          cursor: pointer;
+          transition: all 0.3s ease-in-out;
+          &:hover {
+            color: $button-color;
+          }
+        }
+      }
     }
-    p {
-      font-size: 1rem;
-      font-weight: 300;
-      line-height: 1.8em;
-      text-align: center;
-      margin-bottom: 30px;
+  }
+  &__right {
+    &__top {
+      p {
+        &:nth-of-type(1) {
+          font-size: 18px;
+          letter-spacing: 5px;
+        }
+        &:nth-of-type(2) {
+          font-size: 60px;
+          font-weight: 900;
+          color: #286dec;
+        }
+      }
     }
-  }
-  &_form {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding-bottom: 100px;
-  }
-  &_body {
-    // max-width: 850px;
-    // display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    // box-shadow: 0px 0px 19px 5px rgba(0,0,0,0.19);
-  }
-}
-
-.field {
-  width: 100%;
-  padding: 0.5rem 1rem;
-  outline: none;
-  border: 2px solid rgba(0, 0, 0, 0);
-  background-color: white;
-  font-size: 1.1rem;
-  margin-bottom: 22px;
-  transition: 0.3s;
-
-  &:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
-
-  &:focus {
-    border: 2px solid rgba(30, 85, 250, 0.47);
-    background-color: #fff;
-  }
-
-  &_area {
-    min-height: 150px;
-  }
-
-  &_btn {
-    width: 100%;
-    padding: 0.5rem 1rem;
-    background-color: $button-color;
-    color: #fff;
-    font-size: 1.1rem;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    transition: 0.3s;
-
-    &:hover {
-      opacity: 0.7;
+    &__form {
+      form {
+        max-width: 700px;
+        > div {
+          display: flex;
+          flex-direction: column;
+          label {
+            margin: 15px 0px 8px 10px;
+            font-size: 14px;
+            font-weight: 700;
+          }
+          input,
+          textarea {
+            min-height: 48px;
+            margin-bottom: 24px;
+            padding-left: 24px;
+            border: 1px #000;
+            background-color: #f7f5f5;
+            color: #000;
+            font-size: 14px;
+            line-height: 17px;
+          }
+          textarea {
+            padding-top: 20px;
+          }
+        }
+        button {
+          margin-top: 20px;
+          @include button-basic();
+        }
+      }
     }
   }
 }
