--- a/components/Footer/_footer.scss
+++ b/components/Footer/_footer.scss
@@ -1,114 +1,123 @@
 .footer {
-    position: relative;
-    display: grid;
-    gap: 2rem;
-    background: #111;
-    padding: 50px 100px;
-    grid-template-columns: 1fr 1fr 1fr;
+  position: relative;
+  display: grid;
+  border-top: 1px solid rgb(243, 242, 242);
+
+  gap: 2rem;
+  background-image: linear-gradient(180deg, #ffffff 0%, #bce0f7 100%);
+  padding: 50px 100px;
+  grid-template-columns: 1fr 1fr 1fr;
+  @include breakpoints-down(medium) {
+    grid-template-columns: 1fr 1fr;
+    padding: 50px;
+  }
+  @include breakpoints-down(small) {
+    grid-template-columns: 1fr;
+    padding: 50px 20px;
+  }
+  &_item {
+    // width: 100%;
+    @include max-width;
+    h2 {
+      position: relative;
+      color: $button-color;
+      font-weight: 500;
+      margin-bottom: 50px;
+      @include breakpoints-down(small) {
+        margin-bottom: 20px;
+      }
+    }
+    h2:before {
+      content: " ";
+      bottom: -5px;
+
+      position: absolute;
+      left: 0;
+      width: 50px;
+      height: 2px;
+      background: $button-color;
+    }
+
+    p {
+      max-width: 400px;
+      @include breakpoints-down(small) {
+        max-width: 100%;
+      }
+      color: #464551;
+      text-align: justify;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 160%;
+    }
+  }
+
+  &_list {
+    display: flex;
+    margin-top: 50px;
+    li {
+      a {
+        color: #286dec;
+        margin-right: 20px;
+
+        :hover {
+          color: white;
+          background: #286dec;
+        }
+      }
+    }
+  }
+  &_input {
+    width: 359px;
+    height: 37px;
+    padding: 10px;
+    background: white;
+    border: 1px solid #ffffff;
+    outline: none;
+    color: black;
+    border-radius: 2px;
+
     @include breakpoints-down(medium) {
-        grid-template-columns: 1fr 1fr;
-        padding: 50px;
+      width: 100%;
     }
-    @include breakpoints-down(small) {
-        grid-template-columns: 1fr;
-        padding: 50px 20px;
-    }
-    &_item {
-        width: 100%;
-        h2 {
-            position: relative;
-            color: #fff;
-            font-weight: 500;
-            margin-bottom: 15px;
-            font-family: "Times New Roman", Times, serif;
-        }
-        h2:before {
-            content: " ";
-            bottom: -5px;
+  }
 
-            position: absolute;
-            left: 0;
-            width: 50px;
-            height: 2px;
-            background: $button-color;
-        }
+  &_info {
+    li {
+      cursor: pointer;
+      text-align: justify;
 
-        p {
-            max-width: 400px;
-            @include breakpoints-down(small) {
-                max-width: 100%;
-            }
-            color: #999;
-            text-align: justify;
-            font-size: 16px;
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-        }
-    }
-
-    &_list {
+      > p {
         display: flex;
-        margin-top: 50px;
-        li {
-            a {
-                color: #fff;
-                margin-right: 20px;
-
-                :hover {
-                    background: $button-color;
-                }
-            }
+        align-items: center;
+        margin-bottom: 10px;
+        svg {
+          margin-right: 10px;
         }
+      }
+      :hover {
+        color: #286dec;
+      }
     }
-    &_input {
-        width: 359px;
-        height: 37px;
-        padding: 10px;
-        background: white;
-        border: 1px solid #ffffff;
-        outline: none;
-        color: black;
-        border-radius: 2px;
+  }
 
-        @include breakpoints-down(medium) {
-            width: 100%;
-        }
+  &_link {
+    display: flex;
+
+    @include breakpoints-down(medium) {
+      display: grid;
     }
 
-    &_info {
-        li {
-            cursor: pointer;
-            text-align: justify;
-
-            > p {
-                display: flex;
-                align-items: center;
-                margin-bottom: 10px;
-                svg {
-                    margin-right: 10px;
-                }
-            }
-            :hover {
-                color: white;
-            }
-        }
+    &_items {
+      cursor: pointer;
+      > p {
+        margin-bottom: 10px;
+      }
+      :hover {
+        color: #286dec;
+        text-decoration: underline;
+      }
     }
-
-    &_link {
-        display: flex;
-
-        @include breakpoints-down(medium) {
-            display: grid;
-        }
-
-        &_items {
-            cursor: pointer;
-            > p {
-                margin-bottom: 10px;
-            }
-            :hover {
-                color: white;
-                text-decoration: underline;
-            }
-        }
-    }
+  }
 }
