--- a/components/OurWorks/_ourWorks.scss
+++ b/components/OurWorks/_ourWorks.scss
@@ -1,6 +1,6 @@
 .ourWorks {
   padding: 120px 0px;
-  background-color: #e6f2ff;
+  background-color: #f9fbfe;
   @include breakpoints-down(small) {
     padding: 50px 0px;
   }
@@ -11,14 +11,19 @@
     justify-content: center;
     align-items: center;
     > div:nth-of-type(1) {
-      > p {
-        text-transform: uppercase;
-        font-size: 36px;
-        letter-spacing: 0.02em;
-        color: #1b2935;
-        font-weight: 900;
-        margin-bottom: 50px;
-        text-align: left;
+      p {
+        text-align: center;
+        &:nth-of-type(1) {
+          font-size: 18px;
+          letter-spacing: 5px;
+          text-transform: uppercase;
+        }
+        &:nth-of-type(2) {
+          font-size: 60px;
+          font-weight: 900;
+          color: #286dec;
+          margin-bottom: 50px;
+        }
       }
     }
     > div:nth-of-type(2) {
@@ -38,24 +43,6 @@
         position: relative;
         z-index: 2;
 
-        &:hover {
-          &::after {
-            transform: rotate(10deg);
-          }
-        }
-        &::after {
-          content: "";
-          position: absolute;
-          width: 100%;
-          top: 0px;
-          left: 0px;
-          z-index: -1;
-          transform: rotate(0deg);
-          transition: all 0.5s ease;
-          border-radius: 10%;
-          height: 100%;
-          background: linear-gradient(45deg, #b95ce4, #4f29c2);
-        }
         img {
           width: 100%;
           height: 260px;
