--- a/components/About/_about.scss
+++ b/components/About/_about.scss
@@ -19,6 +19,7 @@
       }
       &:nth-of-type(2) {
         margin-top: 20px;
+
         color: #286dec;
         font-size: 2.25rem;
         @include breakpoints-down(small) {
@@ -31,7 +32,7 @@
         max-width: 550px;
       }
       &:nth-of-type(3) {
-        margin: 30px 0px;
+        margin: 30px 0px 60px 0px;
         font-style: normal;
         font-weight: 400;
         font-size: 18px;
@@ -39,8 +40,7 @@
         opacity: 0.7;
       }
     }
-    button {
-      margin-top: 20px;
+    a {
       @include button-basic();
     }
   }
